<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/beige"
    tools:context=".HowTo" >

    
        <LinearLayout
	    android:id="@+id/buttons"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true" >
		
        <Button
	        android:id="@+id/button_p"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="33"
	        android:enabled="false"
	        android:text="@string/prev_button" />
        <Button
	        android:id="@+id/button_n"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="33"
	        android:text="@string/next_button" />

        <Button
	        android:id="@+id/button_t"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="33"
	        android:text="@string/topics_button" />
        
    	</LinearLayout>
    	
        <LinearLayout
            android:id="@+id/title"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >
		<TextView
		    android:id="@+id/topic_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dp"
		    android:layout_gravity="center"
		    android:textSize="20sp"
		    android:text="@string/insert_title" />
        </LinearLayout>
		<ScrollView
	        android:layout_above="@id/buttons"
	        android:layout_below="@+id/title"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:fillViewport="true" >
			
			<!--  <LinearLayout
			    android:id="@+id/how_to_content"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	        </LinearLayout>
	        -->

			<TextView
			    android:id="@+id/topic_content"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/insert_content"  /> 
	     </ScrollView>

</RelativeLayout>